# cutiverse

./: DESCRIPTION.rst  Makefile  README.md  setup.cfg  setup.py
docs/source/: changelog.rst  conf.py  index.rst
docs/source/topics/: usage.rst
src/: cute.py
src/dopameme/: constants.py  cute.py  entry_point.py  search.py  testlib.py
src/dopameme/backends/: base.py  duckduckgo.py  google.py  yandex.py
src/dopamine/: constants.py  cute.py  entry_point.py
