[metadata]
name = dopameme
description = Get a quick dopamine hit of cuteness
long_description = file: DESCRIPTION.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords = cute, adorable, dopamine
license_files = LICENSE
classifiers =
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >= 3.6
packages = find:
package_dir =
    = src
install_requires =
    requests
    log_color
    lxml
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dopameme = dopameme.entry_point:main

[options.extras_require]
dev =
    black
    setuptools_scm
